--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* styles.css */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: red;
+  /* background-color: red; */
 }
