--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,21 @@
 body {
   /* background-color: red; */
 }
+
+h1 {
+    text-align: center;
+}
+
+p {
+    font-size: 1.5rem;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+img {
+    max-width: 400px;
+}
