--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* styles.css */
 *, *::before, *::after {
   box-sizing: border-box;
+  margin:0;
+  padding: 0;
 }
 
 body {
@@ -21,6 +23,28 @@ p {
     gap: 2rem;
 }
 
-img {
-    max-width: 400px;
+
+.row {
+    max-width: 1170px;
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-rows: repeat(2, 1fr); */
+    grid-gap: 50px 30px;
 }
+
+.left {
+    overflow: hidden;
+}
+
+.left img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.right {
+    display: flex;
+    align-items: center;
+}
+
